@@ -20,7 +20,6 @@ import cn.hutool.core.io.IoUtil;
 import cn.hutool.core.lang.UUID;
 import cn.hutool.core.util.StrUtil;
 import com.breeze.boot.core.enums.ContentType;
-import com.breeze.boot.core.enums.ResultCode;
 import com.breeze.boot.core.exception.BreezeBizException;
 import com.breeze.boot.core.utils.AssertUtil;
 import com.breeze.boot.local.config.LocalProperties;
@@ -39,6 +38,8 @@ import java.io.OutputStream;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
+
+import static com.breeze.boot.core.enums.ResultCode.FILE_NOT_FOUND;
 
 /**
  * 本地上传 工具
@@ -117,12 +118,12 @@ public class LocalStorageTemplate {
         // 获取指定路径的文件对象
         File file = this.getFile(path);
         // 检查文件是否存在，若不存在则抛出异常
-        AssertUtil.isTrue(file.exists(), ResultCode.FILE_NOT_FOUND);
+        AssertUtil.isTrue(file.exists(), FILE_NOT_FOUND);
 
         // 设置HTTP响应的相关属性以支持文件下载
         response.setCharacterEncoding(StandardCharsets.UTF_8.name());
         response.setContentType(ContentType.getContentType(fileName));
-        response.setHeader("Content-disposition", "attachment;filename*=utf-8''" + URLEncoder.encode(fileName, StandardCharsets.UTF_8.name()));
+        response.setHeader("Content-disposition", "attachment;filename*=utf-8''" + URLEncoder.encode(fileName, StandardCharsets.UTF_8));
 
         try (FileInputStream fis = new FileInputStream(file)) {
             // 获取HTTP响应的输出流
